@@ -47,6 +47,7 @@ extern "C" {
 	void evma_set_tls_parms (const char *binding, const char *privatekey_filename, const char *certchain_filenane);
 	void evma_start_tls (const char *binding);
 	int evma_get_peername (const char *binding, struct sockaddr*);
+	int evma_get_sockname (const char *binding, struct sockaddr*);
 	int evma_get_subprocess_pid (const char *binding, pid_t*);
 	int evma_get_subprocess_status (const char *binding, int*);
 	int evma_send_data_to_connection (const char *binding, const char *data, int data_length);
